Cambiato il metodo toList()